Progress bar fix attempt

--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
                     </div>
                 </div>
             </div>
+
+            <div id='coursework'>
+
+            </div>
+
+            <div id='experience'>
+
+            </div>
         </div>
 
         <div class='dark-mode-button center text-small' onclick='toggleDarkMode()'>Toggle Dark Mode</div>
