Remove progress bar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class='progress-container'>
                 <div class='progress-bar'></div>
             </div>
-        -->
+            -->
         </div>
 
         <div class='portfolio flex-vertical'>
@@ -178,7 +178,7 @@
 
             </div>
 
-            <div id='experience'>
+            <div id='resume'>
 
             </div>
         </div>
