Add name and animation to menu bar

--- a/index.html
+++ b/index.html
@@ -38,16 +38,26 @@
         <div class='portfolio-menu flex-vertical' data-aos='fade-down' data-aos-anchor='#experience' data-aos-anchor-placement='top-top' data-aos-offset='-60'>
             <!-- TODO: Change to links to scroll down to specified sections and highlight link when scrolled to that section -->
             <div class='menu-buttons flex-horizontal'>
+                <div class='name-container'>
+                    <p class='text-small'>A</p>
+                    <p class='text-small'>r</p>
+                    <p class='text-small'>n</p>
+                    <p class='text-small'>a</p>
+                    <p class='text-small'>v</p>
+                    <p class='text-small'> </p>
+                    <p class='text-small'>T</p>
+                    <p class='text-small'>h</p>
+                    <p class='text-small'>a</p>
+                    <p class='text-small'>r</p>
+                    <p class='text-small'>e</p>
+                    <p class='text-small'>j</p>
+                    <p class='text-small'>a</p>
+                </div>
                 <button type="button" id='Experience' class='menu selected' onclick='select("Experience")'><a href='#experience'><h2 class='title-small small-caps'>Experience</h2></a></button>
                 <button type="button" id='Projects' class='menu' onclick='select("Projects")'><a href='#projects'><h2 class='title-small small-caps'>Projects</h2></a></button>
                 <button type="button" id='Coursework' class='menu' onclick='select("Coursework")'><a href='#coursework'><h2 class='title-small small-caps'>Coursework</h2></a></button>
                 <button type="button" id='Resume' class='menu' onclick='select("Resume")'><a href='#resume'><h2 class='title-small small-caps'>Resume</h2></a></button>
             </div>
-            <!--
-            <div class='progress-container'>
-                <div class='progress-bar'></div>
-            </div>
-            -->
         </div>
 
         <div class='portfolio flex-vertical'>
