Use Roboto as body font and increase letter spacing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         
         <link rel='stylesheet' type="text/css" href='assets/stylesheets/build/main.css'>
 
-        <!-- Lato font -->
+        <!-- Lato (titles) and Roboto (body) fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
         <!-- Import AOS Library for card transitions -->
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
