Fix filename in experience card img src

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
-                            <img src='assets/images/table-tennis-logo.png' class='experience image'>
+                            <img src='assets/images/table-tennis-logo.PNG' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
@@ -85,7 +85,7 @@
                     </div>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
-                            <img src='assets/images/table-tennis-logo.png' class='experience image'>
+                            <img src='assets/images/table-tennis-logo.PNG' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
