Fix pictures and add coursework and experience sections

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
-                            <img src='assets/images/table-tennis-logo.PNG' class='experience image'>
+                            <img src='assets/images/mathnasium-logo.png' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
@@ -85,7 +85,7 @@
                     </div>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
-                            <img src='assets/images/table-tennis-logo.PNG' class='experience image'>
+                            <img src='assets/images/scarabs-logo.png' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
@@ -103,7 +103,7 @@
                     </div>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
-                            <img src='assets/images/yearbook-2020-logo.png' class='experience image'>
+                            <img src='assets/images/museum-of-flight-logo.png' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
@@ -150,18 +150,18 @@
                     </div>
                     <div class='project card flex-vertical' data-aos='fade' data-aos-delay='100'>
                         <div class='project image-container center'>
-                            <img src='assets/images/table-tennis-logo.PNG' class='project image'>
+                            <img src='assets/images/spotify-features-all.png' class='project image'>
                         </div>
                         <div class='project title'>
-                            <p class='title-small'>Music Analysis</p>
+                            <p class='title-small'>Music Analysis (In Progress)</p>
                         </div>
                         <div class='project description'>
-                            <p class='text-small'>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music. Trained a classification model using Tensorflow to predict success of a provided music sample.</p>
+                            <p class='text-small'>An analysis of samples of popular music in Python. Looked for key features of popular songs and what differentiates them from unpopular music.<br><br>See it <a target='_blank' href='https://github.com/arnavthareja/music-analysis'>here</a>.</p>
                         </div>
                     </div>
                     <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
-                            <img src='assets/images/table-tennis-logo.PNG' class='project image'>
+                            <img src='assets/images/personal-website.PNG' class='project image'>
                         </div>
                         <div class='project title'>
                             <p class='title-small'>Personal Website</p>
@@ -172,7 +172,7 @@
                     </div>
                     <div class='project card flex-vertical' data-aos='fade' data-aos-delay='50'>
                         <div class='project image-container center'>
-                            <img src='assets/images/table-tennis-logo.PNG' class='project image'>
+                            <i class='fa fa-github fa-8x project image'></i>
                         </div>
                         <div class='project title'>
                             <p class='title-small'>More on GitHub!</p>
@@ -185,11 +185,50 @@
             </div>
 
             <div id='coursework'>
-
+                <div class='title-container center'>
+                    <h2 class='title-medium portfolio-title'>Coursework</h2>
+                </div>
+                <img src='assets/images/construction.gif'>
+                <p class='text-medium alt-color'>This section is under construction. The content you see will be improved in the future.</p>
+                <div class='section-container flex-vertical'>
+                    <div class='experience card'>
+                        <div class='experience description'>
+                            <h2 class='title-small'>Completed Coursework</h2>
+                            <ul>
+                                <li class='text-small'>Computer Programming I (CSE 142)</li>
+                                <li class='text-small'>Calculus I and II (MATH 124 and 125)</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class='experience card'>
+                        <div class='experience description'>
+                            <h2 class='title-small'>Projected Coursework</h2>
+                            <ul>
+                                <li class='text-small'>Computer Programming II (CSE 143)</li>
+                                <li class='text-small'>Foundations of Computing I and II (CSE 311 and 312)</li>
+                                <li class='text-small'>Data Structures and Parallelism (CSE 332)</li>
+                                <li class='text-small'>Calculus III (MATH 126)</li>
+                                <li class='text-small'>Matrix Algebra with Applications (MATH 308)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div id='resume'>
-
+                <div class='title-container center'>
+                    <h2 class='title-medium portfolio-title'>Resume</h2>
+                </div>
+                <img src='assets/images/construction.gif'>
+                <p class='text-medium alt-color'>This section is under construction. The content you see will be improved in the future.</p>
+                <div class="section-container flex-vertical">
+                    <div class='experience card'>
+                        <h2 class='text-medium'>Click <a target='_blank' href='assets/Arnav-Thareja-Resume.pdf'>here</a> to open my resume in another tab.</h2>
+                    </div>
+                    <div class='experience card'>
+                        <h2 class='text-medium'>Click <a download='Arnav-Thareja-Resume.pdf' href='assets/Arnav-Thareja-Resume.pdf'>here</a> to download my resume.</h2>
+                    </div>
+                </div>
             </div>
         </div>
 
