--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class='experience card flex-horizontal' data-aos='fade'>
                         <div class='experience image-container center'>
-                            <img src='assets/images/scarabs-logo.png' class='experience image'>
+                            <img src='assets/images/scarabs-logo.jpg' class='experience image'>
                         </div>
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
@@ -161,7 +161,7 @@
                     </div>
                     <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
-                            <img src='assets/images/personal-website.PNG' class='project image'>
+                            <img src='assets/images/personal-website.jpg' class='project image'>
                         </div>
                         <div class='project title'>
                             <p class='title-small'>Personal Website</p>
