Improve user experience on small screens

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <p class='text-small'>An online app designed to keep students connected during COVID-19 quarantines. Each student gets a virtual yearbook page that others can sign, and they can sign others' yearbook pages.<br><br>Try it at <a target="_blank" href="https://yearbook-hhs.web.app">https://yearbook-hhs.web.app</a> and see the source code <a target="_blank" href="https://www.github.com/evilpegasus/Yearbook">here</a>.</p>
                         </div>
                     </div>
-                    <div class='project card flex-vertical' data-aos='fade' data-aos-delay='50'>
+                    <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
                             <img src='assets/images/table-tennis-logo.PNG' class='project image'>
                         </div>
@@ -148,7 +148,7 @@
                             <p class='text-small'>A Java app to enable a quick and paperless sign-in process for Hazen High School's Table Tennis Club. Uses the Google Sheets API to upload sign-in records to the club's Google Sheet for membership tracking and analytics.</p>
                         </div>
                     </div>
-                    <div class='project card flex-vertical' data-aos='fade' data-aos-delay='100'>
+                    <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
                             <img src='assets/images/spotify-features-all.png' class='project image'>
                         </div>
@@ -170,7 +170,7 @@
                             <p class='text-small'>This website. Written in HTML, SCSS, and JavaScript.<br><br>See the source code <a target='_blank' href='https://github.com/arnavthareja/arnavthareja.github.io'>here</a>.</p>
                         </div>
                     </div>
-                    <div class='project card flex-vertical' data-aos='fade' data-aos-delay='50'>
+                    <div class='project card flex-vertical' data-aos='fade'>
                         <div class='project image-container center'>
                             <i class='fa fa-github fa-8x project image'></i>
                         </div>
