Update Coursework section

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Completed Coursework</h2>
+                            <h2 class='title-small'>Completed Coursework (Selected)</h2>
                             <ul>
                                 <li class='text-small'>Computer Programming I (CSE 142)</li>
                                 <li class='text-small'>Calculus I and II (MATH 124 and 125)</li>
@@ -202,7 +202,7 @@
                     </div>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Projected Coursework</h2>
+                            <h2 class='title-small'>Projected Coursework (Selected)</h2>
                             <ul>
                                 <li class='text-small'>Computer Programming II (CSE 143)</li>
                                 <li class='text-small'>Foundations of Computing I and II (CSE 311 and 312)</li>
