Add dates for Museum of Flight

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class='experience content flex-vertical'>
                             <div class='experience title flex-vertical'>
                                 <p class='title-small'>Junior Docent</p>
-                                <p class='title-xs'>Museum of Flight</p>
+                                <p class='title-xs'>Museum of Flight (September 2016 - December 2018)</p>
                             </div>
                             <div class='experience description'>
                                 <ul>
