Fix scrollbar bug

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class='section-container flex-vertical'>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Completed Coursework (Selected)</h2>
+                            <h2 class='title-small'>Selected Coursework</h2>
                             <ul>
                                 <li class='text-small'>Computer Programming I (CSE 142)</li>
                                 <li class='text-small'>Calculus I and II (MATH 124 and 125)</li>
@@ -203,7 +203,7 @@
                     </div>
                     <div class='experience card'>
                         <div class='experience description'>
-                            <h2 class='title-small'>Projected Coursework (Selected)</h2>
+                            <h2 class='title-small'>Planned Coursework</h2>
                             <ul>
                                 <li class='text-small'>Computer Programming II (CSE 143)</li>
                                 <li class='text-small'>Foundations of Computing I and II (CSE 311 and 312)</li>
@@ -224,10 +224,10 @@
                 <p class='text-medium alt-color'>This section is under construction. The content you see will be improved in the future.</p>
                 <div class="section-container flex-vertical">
                     <div class='experience card'>
-                        <h2 class='text-medium'>Click <a target='_blank' href='assets/Arnav-Thareja-Resume.pdf'>here</a> to open my resume in another tab.</h2>
+                        <h2 class='text-medium'>Click <a target='_blank' href='Resume'>here</a> to open my resume in another tab.</h2>
                     </div>
                     <div class='experience card'>
-                        <h2 class='text-medium'>Click <a download='Arnav-Thareja-Resume.pdf' href='assets/Arnav-Thareja-Resume.pdf'>here</a> to download my resume.</h2>
+                        <h2 class='text-medium'>Click <a href='Resume/Resume.pdf' download>here</a> to download my resume.</h2>
                     </div>
                 </div>
             </div>
