Update resume download link

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <h2 class='text-medium'>Click <a target='_blank' href='Resume'>here</a> to open my resume in another tab.</h2>
                     </div>
                     <div class='experience card'>
-                        <h2 class='text-medium'>Click <a href='Resume/Resume.pdf' download='Arnav-Thareja-Resume.pdf'>here</a> to download my resume.</h2>
+                        <h2 class='text-medium'>Click <a href='Resume/Arnav-Thareja-Resume.pdf' download='Arnav-Thareja-Resume.pdf'>here</a> to download my resume.</h2>
                     </div>
                 </div>
             </div>
